--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "src/index.js",
   "exports": {
-    ".": "src/index.js"
+    ".": "./src/index.js"
   },
   "files": [
     "src/",
