--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "verify": "bash scripts/verify-exports.sh"
   },
   "dependencies": {
-    "@wlearn/types": "^0.1.0",
-    "@wlearn/core": "^0.1.0"
+    "@wlearn/types": "0.1.0",
+    "@wlearn/core": "0.1.0"
   },
   "license": "MIT",
   "repository": {
